--- a/box.html
+++ b/box.html
@@ -10,12 +10,21 @@
 			height: 400px;
 			background-color:#33FFBD;
 			border: 1px solid;
+			font-size: 50px;
+			text-align: center;
+			color: red;
+			margin-top: 10%;
+		}
+		.q{
+			display: flex;
+			justify-content: center;
+
 		}
 	</style>
 </head>
 <body>
-	<div>
-		<div class="a"></div>
+	<div class="q">
+		<div class="a">Hello for Git</div>
 	</div>
 </body>
 </html>
